package com.EGG.ServiSalud.Entities;

import com.EGG.ServiSalud.Entities.Enums.Especialidad;

import java.util.ArrayList;
import java.util.List;


public class Profesional {
    private Especialidad especialidad;
    private Double reputacion;
    private Double valorConsultaConCS;
    private Double valorConsultaSinCS;

}
