package com.EGG.ServiSalud.Enums;

public enum Especialidad {
    CLINICO,
    CARDIOLOGO,

}
