package com.EGG.ServiSalud.Enums;

public enum Genero {
    MASCULINO,
    FEMENINO,
    OTRO
}
