package com.EGG.ServiSalud.entities.Enums;

public enum CoberturaMedica {
}
