package com.EGG.ServiSalud.entities;

public class FechaDisponible {
}
