package com.EGG.ServiSalud.entities;

public class Turno {
}
