package com.EGG.ServiSalud.exceptions;

public class PersonaException extends Exception{
    public PersonaException(String msj){
        super(msj);
    }
}
