@startuml
enum com.EGG.ServiSalud.entities.Enums.Genero {
+  MASCULINO
+  FEMENINO
+  OTRO
}

class com.EGG.ServiSalud.entities.Turno {
}
class com.EGG.ServiSalud.controllers.PortalController {
+ String index()
}

enum com.EGG.ServiSalud.entities.Enums.CoberturaMedica {
}
class com.EGG.ServiSalud.entities.Admin {
}
class com.EGG.ServiSalud.entities.CalendarioMedico {
}
class com.EGG.ServiSalud.entities.Paciente {
- boolean coberturaSocial
- String motivoDeConsulta
- Date fechaNacimiento
- Array[] historiaClinica
- String fotoPerfil
}

class com.EGG.ServiSalud.controllers.PersonaController {
- PersonaService perService
+ Persona getPersona(Long)
+ String registrar()
}


interface com.EGG.ServiSalud.persistent.PersonaPersistent {
+ Persona buscarPorId(Long)
+ List<Persona> buscarPorNombre(String)
+ List<Persona> buscarPorApellido(String)
}

class com.EGG.ServiSalud.entities.Profesional {
- Especialidad especialidad
- Double reputacion
- Double valorConsultaConCS
- Double valorConsultaSinCS
}

enum com.EGG.ServiSalud.entities.Enums.HorarioCita {
}
class com.EGG.ServiSalud.entities.Persona {
- Long idPersona
- String nombre
- String apellido
- Genero genero
- String fechaNacimiento
- Integer dni
- String mail
- String password
- String phone
}

enum com.EGG.ServiSalud.entities.Enums.Especialidad {
+  CLINICO
+  CARDIOLOGO
}

class com.EGG.ServiSalud.entities.FechaDisponible {
}
class com.EGG.ServiSalud.ServiSaludApplication {
+ {static} void main(String[])
}

class com.EGG.ServiSalud.exceptions.PersonaException {
}
class com.EGG.ServiSalud.services.PersonaService {
- PersonaPersistent perRepositorio
+ Persona createPersona(String,String,Genero,String,String,Integer,String,String)
+ List<Persona> getAllPersonas()
+ Persona getPersonaById(Long)
+ Persona updatePersona(Long,Persona)
+ void deletePersona(Long)
}




org.springframework.data.jpa.repository.JpaRepository <|-- com.EGG.ServiSalud.persistent.PersonaPersistent
com.EGG.ServiSalud.exceptions.Exception <|-- com.EGG.ServiSalud.exceptions.PersonaException
@enduml